<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">socialParliament</string>
    <string name="action_settings">Settings</string>
    <string name="usernamehint">Enter Username</string>
    <string name="passwordhint">Enter Password</string>
    <string name="reciepthint">Recipient</string>
    <string name="msghint">Message</string>
    <string name="signin">Sign In</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="changing_fragments"></string>
     <string name="postprompt">Say Something</string>
    <string name="post">Post</string>
    <string name="feedstxt">Your Feeds</string>
    <string name="attending">Attending</string>
    <string name="nametxt">Name</string>
    <string name="timetxt">2days ago</string>
    <string name="replytxt">Reply</string>
    <string name="replyhint">Reply message here</string>
    <string name="posttxt">My post is not that long but it makes sense atleast as you read it now.</string>
    <string name="grps">Your Groups</string>
    <string name="tpcs">Your Topics</string>
    <string name="invitations">Invitations</string>
    <string name="read">Read</string>
    <string name="compose">Compose Message</string>
    <string name="unread">Unread</string>
    <string name="sendmsg">Send</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="notification">Notification</string>
    <string name="refresh">Refresh</string>
    <string name="going">Going</string>
    <string name="no">No</string>
    <string name="maybe">May be</string>

</resources>
