<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginLeft="6dp"
		android:layout_marginRight="6dp"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
	    android:background="@drawable/background_card" >
	    	<ImageView
			        android:id="@+id/MSG_PROFILE_IMAGE"
			        android:layout_width="45dp"
			        android:layout_height="50dp"
			        android:src="@drawable/f2" 
			        android:contentDescription="@string/app_name"/> 
			           
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical" 
			    android:layout_marginLeft="3dp">  
				
		        <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal">	
				        
						    <TextView
						        android:id="@+id/SENDER"
						        android:layout_width="190dp"
						        android:layout_height="wrap_content"
						        android:textColor="@color/green"
						        android:text="@string/nametxt" />
						    
						    <ImageView
						        android:id="@+id/MSG_ICON"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:layout_gravity="right"
						        android:layout_weight="1"
						        android:contentDescription="@string/app_name"
						        android:src="@drawable/msgblack" />
 
	            </LinearLayout>
			    
			    <TextView
			        android:id="@+id/MSG"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/posttxt" />
	
			    <LinearLayout 
			        android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
			        <TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:textColor="@color/green"
				        android:text="@string/replytxt" 
				        android:layout_marginLeft="5dp"/>
			        
			        <TextView
				        android:id="@+id/MSG_TIME"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:textColor="@color/orange"
				        android:gravity="right"
				        android:layout_weight="1"
				        android:text="@string/timetxt" />
			    </LinearLayout>	
		
    </LinearLayout>
    
</LinearLayout>

</LinearLayout>
