<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginLeft="30dp"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
	    android:background="@drawable/background_card" >
	    		           
		 <LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_marginLeft="3dp" >  
				
		        <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal">	
				        
						    <TextView
						        android:id="@+id/OMSGD_SENDER"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:gravity="right"
						         android:layout_marginLeft="3dp"
				                android:layout_weight="1"
						        android:textColor="@color/green"
						        android:text="@string/nametxt" />
 
	            </LinearLayout>
			    
			    <TextView
			        android:id="@+id/OMSGD"
			        android:layout_width="210dp"
			        android:layout_height="wrap_content"
			        android:text="@string/posttxt" />
	
			    <LinearLayout 
			        android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
			        
			        <TextView
				        android:id="@+id/OMSGD_TIME"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:textColor="@color/orange"
				        android:gravity="left"
				        android:layout_weight="1"
				        android:text="@string/timetxt" />
			    </LinearLayout>	
		
        </LinearLayout>   
        
        <ImageView
	        android:id="@+id/OMSGD_PROFILE_IMAGE"
	        android:layout_width="45dp"
	        android:layout_height="50dp"
	        android:src="@drawable/f2" 
	        android:contentDescription="@string/app_name"/> 
</LinearLayout>

</LinearLayout>
