<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background1"
    tools:context=".SignInActivity" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/linearlayout_padding_top"
        android:orientation="vertical" >

        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/courtofarms"
            android:contentDescription="@string/app_name"/>
        
        <TextView
            android:id="@+id/HTXT"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/signin"
	        android:textColor="@color/orange"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
	        android:id="@+id/USERNAME"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/field_padding"
	        android:textColor="@color/green"
	        android:background="@drawable/edit_text_shape"
	        android:hint="@string/usernamehint"
	        android:ems="10" >

        <requestFocus />
        </EditText>
    
        <EditText
	        android:id="@+id/PASSWORD"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/field_padding"
	        android:textColor="@color/green"
	        android:background="@drawable/edit_text_shape"
	        android:hint="@string/passwordhint"
	        android:inputType="textPassword"
	        android:ems="10" >

        <requestFocus />
       </EditText>
        
        <Button
	        android:id="@+id/SIGNIN_BTN"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/field_padding"
	        android:background="@drawable/btn_shape"
	        android:textColor="@color/white"
	        android:text="@string/signin" />

  </LinearLayout>


</RelativeLayout>
