<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginLeft="6dp"
		android:layout_marginRight="6dp"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
	    android:background="@drawable/background_card" >
	    	<ImageView
			        android:id="@+id/GP_COMMENT_PROFILE_IMAGE"
			        android:layout_width="45dp"
			        android:layout_height="50dp"
			        android:src="@drawable/f2" 
			        android:contentDescription="@string/app_name"/> 
			           
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical" 
			    android:layout_marginLeft="3dp">  
				
		        <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal">					        
						    <TextView
						        android:id="@+id/GP_COMMENT_SENDER"
						        android:layout_width="190dp"
						        android:layout_height="wrap_content"
						        android:textColor="@color/green"
						        android:text="@string/nametxt" />
 
	            </LinearLayout>
			    
			    <TextView
			        android:id="@+id/GP_COMMENT"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/posttxt" />
	
			    <ImageView
					android:id="@+id/GP_IMG_POST"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			               <LinearLayout 
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:orientation="horizontal"
								android:layout_marginLeft="5dp">
								        
								        <ImageView
									        android:id="@+id/GP_THUMBS_UP"
									        android:layout_width="wrap_content"
									        android:layout_height="wrap_content"
									        android:src="@drawable/rating_good" 
									        android:contentDescription="@string/app_name"/>
								        
								        <TextView
									        android:id="@+id/GP_THUMBS_UP_NUM"
									        android:layout_width="wrap_content"
									        android:layout_height="wrap_content"
									        android:layout_marginLeft="10dp"
									        android:textColor="@color/green"
									        android:layout_weight="1"
									        android:text="0" />
								        
								        <ImageView
									        android:id="@+id/GP_THUMBS_DOWN"
									        android:layout_width="wrap_content"
									        android:layout_height="wrap_content"
									        android:src="@drawable/rating_bad" 
									        android:contentDescription="@string/app_name"/>
								        
								        <TextView
									        android:id="@+id/GP_THUMBS_DOWN_NUM"
									        android:layout_width="wrap_content"
									        android:layout_height="wrap_content"
									        android:textColor="@color/red"
									        android:layout_marginLeft="10dp"
									        android:layout_weight="1"
									        android:text="0" />
								        
								         <TextView
									        android:id="@+id/GP_COMMENT_TIME"
									        android:layout_width="wrap_content"
									        android:layout_height="wrap_content"
									        android:textColor="@color/orange"
									        android:gravity="right"
									        android:layout_weight="1"
									        android:text="@string/timetxt" />
				
			       
			    </LinearLayout>
		
    </LinearLayout>
    
</LinearLayout>

</LinearLayout>
