<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/INV_POPUP">

    <LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent" 			
			android:orientation="vertical">
			
		    <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content" 
					android:layout_marginLeft="6dp"
					android:layout_marginRight="6dp"
					android:layout_marginTop="4dp"
					android:layout_marginBottom="4dp"
					android:background="@drawable/background_card"
					android:orientation="vertical">
				
		            <LinearLayout
					    android:layout_width="match_parent"
					    android:layout_height="match_parent"
					    android:orientation="horizontal" >						    
						    <LinearLayout
							    android:layout_width="match_parent"
							    android:layout_height="wrap_content"
							    android:orientation="vertical" >  
								
						        <EditText
								        android:id="@+id/ADDPIC_POST_MSG"
								        android:layout_width="match_parent"
								        android:layout_height="wrap_content"
								        android:layout_marginTop="@dimen/field_padding"
								        android:textColor="@color/green"
								        android:background="@drawable/edit_text_shape"
								        android:hint="@string/postprompt"
								        android:ems="10" >
							       <requestFocus />
							    </EditText>	
							      
						        <TextView
									        android:layout_width="wrap_content"
									        android:layout_height="wrap_content"
									        android:text=" " />
						        
							    <ImageView
							        android:id="@+id/POST_IMAGE"
							        android:layout_width="wrap_content"
							        android:layout_height="wrap_content"
							        android:layout_gravity="center"
							        android:layout_weight="1"
							        android:src="@drawable/f2" />
					 					        
								    
						    </LinearLayout>
				    </LinearLayout>
				       
		            <LinearLayout
					        android:layout_width="310dp"
					        android:layout_height="wrap_content"
					        android:orientation="vertical" >
					   
					    <LinearLayout
					        android:layout_width="310dp"
					        android:layout_marginLeft="5dp"
					        android:layout_height="wrap_content"
					        android:orientation="horizontal" >
								    <Button
								        android:id="@+id/AP_POST_BTN" 
								        android:layout_width="130dp"
									    android:layout_height="wrap_content"
									    android:layout_marginTop="5dp"
									    android:background="@drawable/btn_shape"
									    android:text="@string/post"/>
								    
								    <TextView
									        android:layout_width="wrap_content"
									        android:layout_height="wrap_content"
									        android:text=" " />
								    
								    <Button
								        android:id="@+id/AP_CANCEL_BTN" 
								        android:layout_width="130dp"
									    android:layout_height="wrap_content"
									    android:layout_marginTop="5dp"
									    android:background="@drawable/btn_shape_green"
									    android:text="@string/cancel"/>
		               </LinearLayout>
		    </LinearLayout>
		    </LinearLayout>
		
     </LinearLayout>
</FrameLayout>
